Revision history for Perl extension MooseX::SingleArg.

{{$NEXT}}

0.02      2012-03-19
 - Fix prereqs.

0.01      2012-03-19
 - First release.
